# gaussian_basis_rust

./: Cargo.toml  README.md  build.rs
ao_bases/: aug-cc-pvdz.nw
ao_basis/: aug-cc-pv5z.nw  aug-cc-pvdz.nw  cc-pvdz.nw  sto-3g.nw
src/: ao_fock.rs  basisparse.rs  int1e.rs  int2e.rs  lib.rs  matrix_util.rs  molecule.rs
test_data/: h2o_G_ccpvdz.txt  h2o_eri_ccpvdz.txt  h2o_h_ccpvdz.txt  h2o_ovlp_augccpvtz.txt  h2o_ovlp_ccpvdz.txt  h2o_rand_D_ccpvdz.txt  h2o_rand_F_ccpvdz.txt  h2o_rand_G_ccpvdz.txt
