[package]
name = "gaussian_basis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcint = {git = "https://github.com/MarcusTL12/libcint_rust"}
regex = "1.5"
once_cell = "1.12"
ndarray = "0.15"
rayon = "1.5"
